cmake_minimum_required(VERSION 3.24)
project(Algorythms)

set(CMAKE_CXX_STANDARD 17)

add_executable(Algorythms main.cpp Tree/Binary_Tree.cpp Tree/Binary_Tree.h Tree/Search_Tree.cpp Tree/Search_Tree.h List/List.cpp List/List.h List/Stack.cpp List/Stack.h List/Queue.cpp List/Queue.h Tree/Balanced_Tree.cpp Tree/Balanced_Tree.h Tree/AVL_Tree.cpp Tree/AVL_Tree.h)
